<?xml version="1.0" encoding="utf-8"?>
<!-- 此Activity采用线性布局 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <!-- TextView相当于Java中的标签组件,下面是对其属性的设置 -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#00ff00"
        android:textSize="20dip"
        android:text="@string/title" />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dip"
        android:text="@string/user_name"/>
    <!-- 文本编辑框 -->
    <EditText
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:textSize="20dip"
        android:id="@+id/username"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dip"
        android:text="@string/user_password"/>
    <EditText
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:textSize="20dip"
        android:id="@+id/password"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dip"
        android:text="@string/login"
        android:id="@+id/userlogin"
        />

</LinearLayout>