<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#C0C0C0"
    tools:context=".CheckOrderActivity" >

    <LinearLayout
        android:layout_width="match_parent"      
        android:layout_height="40dip"
        android:background="#FF0000"  
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/btngoback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            android:gravity="left|center_vertical"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/goback" 
            android:textSize="10pt" 
            android:textColor="@android:color/white"/>
        
        <TextView
            android:id="@+id/cptcnt"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:background="#FF0000"
            android:text="@string/checkorder"
            android:textSize="10pt"
            android:textColor="@android:color/white" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dip"
            android:background="#C0C0C0"
            android:enabled="false"
            android:visibility="invisible"/>          
    </LinearLayout>
              
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="60dip"
            android:layout_height="fill_parent"        
            android:gravity="right|center_vertical"
            android:textColor="@android:color/background_dark" 
            android:text="@string/packnum" />

        <EditText
            android:id="@+id/etdeclnum"
            android:layout_width="240dip"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/confirm"/>
    
    <Button
         android:id="@+id/btnMsg"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="扫描反馈消息" />
        
	<ListView
	    android:id="@+id/lvdeclnum"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stackFromBottom="true" />

</LinearLayout>