<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvuserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="44dp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/etuserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvuserName"
        android:layout_alignBottom="@+id/tvuserName"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvuserName"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvPWD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvuserName"
        android:layout_below="@+id/etuserName"
        android:layout_marginTop="42dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/etPWD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvPWD"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvPWD"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvPWD"
        android:layout_marginTop="37dp"
        android:text="@string/login" />
    
</RelativeLayout>
